# oh-my-codex

./: Cargo.toml
crates/omx-runtime-core/src/: engine.rs  lib.rs  team_state.rs
crates/omx-runtime/src/: main.rs
crates/omx-runtime/tests/: execution.rs
crates/omx-session-search/: Cargo.toml
crates/omx-session-search/src/: lib.rs  main.rs
src/runtime/: bridge.ts
src/runtime/__tests__/: bridge.test.ts
src/session-history/: search.ts
src/session-history/__tests__/: search-native.test.ts
src/team/: state.ts
src/team/state/: approvals.ts  monitor.ts
